--- a/fyndiqmerchant/backoffice/frontend/css/_colors.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_colors.scss
@@ -22,6 +22,7 @@ $color-panel-footer-text: $color-dark;
 $color-button-primary-background: $color-enabled;
 $color-button-primary-text: $color-light;
 
+
 // Messages
 $color-message-success-background: #6eb755;
 $color-message-success-text: $color-light;
@@ -46,3 +47,6 @@ $color-pagination-inactive-text: $color-light;
 $color-pagination-active-background: $color-pending;
 $color-pagination-inactive-text: $color-dark;
 $color-pagination-disabled-text: $color-disabled-text;
+
+// Form
+$color-form-input-border: #ccc;
