--- a/fyndiqmerchant/backoffice/frontend/css/_panel.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_panel.scss
@@ -6,9 +6,10 @@
     background-color: $color-panel-header-background;
     color: $color-panel-header-text;
     font-size: $font-size-panel-header;
-    padding: 0.4em;
+    padding: .4em;
   }
+
   .fm-panel-body {
-    margin:1em;
+    padding: 1em;
   }
 }
