Added wrappers; Added rounded corners for panel;

--- a/fyndiqmerchant/backoffice/frontend/css/_panel.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_panel.scss
@@ -1,6 +1,8 @@
 .fm-panel {
+  @include border-radius(3px);
   background-color: $color-panel-body-background;
   margin-top: 30px;
+  overflow: hidden;
 
   .fm-panel-header {
     background-color: $color-panel-header-background;
