--- a/fyndiqmerchant/backoffice/frontend/css/_typography.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_typography.scss
@@ -2,11 +2,10 @@ $font-family-default: 'Montserrat', sans-serif;
 $font-text-default: 13pt;
 
 // Panel
-
 $font-size-panel-header: 20pt;
+$font-size-panel-header-subtext: 12pt;
 
 // Navigation
-
 $font-size-navigation-button: 16pt;
 
 // Categories
