Category list styled

--- a/fyndiqmerchant/backoffice/frontend/css/_typography.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_typography.scss
@@ -25,3 +25,6 @@ $font-size-pagination: 13pt;
 // Message
 $font-size-message-header: 28pt;
 $font-size-message-text: $font-text-default;
+
+// Products
+$font-size-category-list-item: 12pt;
