--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -100,6 +100,8 @@
       margin-top: 8px; }
   .fm-panel .fm-panel-body {
     padding: 1em; }
+    .fm-panel .fm-panel-body.no-padding {
+      padding: 0; }
 
 .form-horizontal label {
   margin-top: -3pt;
@@ -111,6 +113,22 @@
   float: left;
   font-size: 12pt;
   text-align: left; }
+
+ul.fm-category-tree {
+  font-size: 12pt;
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+  ul.fm-category-tree li {
+    border-bottom: 1px solid #e3e8ec;
+    font-weight: bold;
+    padding: 5px 10px; }
+    ul.fm-category-tree li.active a {
+      color: #f08c48; }
+    ul.fm-category-tree li a {
+      text-decoration: none; }
+      ul.fm-category-tree li a:hover {
+        color: #f08c48; }
 
 #main {
   background-color: #e7eef4 !important; }
