--- a/fyndiqmerchant/backoffice/frontend/css/_products.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_products.scss
@@ -23,3 +23,18 @@ ul.fm-category-tree {
     }
   }
 }
+
+// Product list
+
+.fm-products-list-container {
+  table {
+    img {
+      border: 1px solid $color-navigation-inactive-border;
+      max-height: $thumbnail-max-height;
+    }
+  }
+}
+
+.export {
+  text-align: right;
+}
