--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -19,9 +19,9 @@
   box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.3);
   width: 100%;
   color: white;
-  padding: 30px 0;
+  padding: 30px 0px 30px 10px;
   position: fixed;
-  z-index: 999;
+  z-index: 9999 !important;
   top: 0;
   left: 0;
   _position: absolute;
