Product prices looking good

--- a/fyndiqmerchant/backoffice/frontend/css/_products.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_products.scss
@@ -28,13 +28,66 @@ ul.fm-category-tree {
 
 .fm-products-list-container {
   table {
+    font-size: $font-text-small;
+
+
+    th {
+      background-color: $color-table-header-background;
+      border-collapse: collapse;
+      border-spacing: 0;
+      padding: .6em;
+    }
+
+    td {
+      border-collapse: collapse;
+      border-spacing: 0;
+      padding: 10px;
+    }
+
     img {
       border: 1px solid $color-navigation-inactive-border;
       max-height: $thumbnail-max-height;
     }
   }
+
+  .prices {
+    th,
+    td {
+      background-color: transparent;
+      padding: 3px 0;
+      text-align: left;
+      white-space: nowrap;
+    }
+    td {
+      text-align: right;
+    }
+
+    .inputdiv {
+      background-color: $color-disabled-background;
+      border: 1px solid $color-disabled-text;
+      float: right;
+      height: 15px;
+      line-height: 15px;
+      margin: 0;
+      padding: 0 3px 0 0;
+    }
+
+    input {
+      border: 0;
+      border-right: 1px solid $color-disabled-text;
+      height: 11px;
+      line-height: 14px;
+      margin: -2px 3px 0 0;
+      padding: 2px;
+      width: 20px;
+    }
+  }
 }
 
+p.info {
+  margin: 1em !important;
+}
 .export {
   text-align: right;
+  margin: 1em;
 }
