--- a/fyndiqmerchant/backoffice/frontend/css/_typography.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_typography.scss
@@ -1,5 +1,7 @@
 $font-family-default: 'Montserrat', sans-serif;
 $font-text-default: 13pt;
+$font-text-small: 11pt;
+
 
 // Panel
 $font-size-panel-header: 20pt;
