--- a/fyndiqmerchant/backoffice/frontend/css/_layout.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_layout.scss
@@ -13,6 +13,10 @@
   padding-bottom: 3em;
 }
 
+.fm-container p {
+  margin: 0 0 1em 0;
+}
+
 .fm-content-wrapper {
   margin: 0 auto;
   width: $content-width;
