--- a/fyndiqmerchant/backoffice/frontend/css/_orders.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_orders.scss
@@ -7,6 +7,11 @@
   float: left;
   width: 240px;
   margin-left: 10px;
+
+  .fm-panel-header {
+    font-size: 15pt;
+    line-height: 32pt;
+  }
 }
 
 .lastupdated {
