--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -124,6 +124,69 @@
   font-size: 12pt;
   text-align: left; }
 
+.fm-loading-overlay {
+  background: black;
+  background: rgba(0, 0, 0, 0.4);
+  -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66000000, endColorstr=#66000000);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66000000, endColorstr=#66000000);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 999; }
+  .fm-loading-overlay img {
+    width: 128px;
+    height: 128px;
+    display: block;
+    margin: 150px auto; }
+
+.fm-message-overlay {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.3);
+  width: 100%;
+  color: white;
+  padding: 30px 0;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  _position: absolute;
+  border: none !important; }
+  .fm-message-overlay.fm-info {
+    background-color: #799ec4;
+    border-color: #87acd3; }
+  .fm-message-overlay.fm-error {
+    background-color: #e85353;
+    border-color: #f55454; }
+  .fm-message-overlay.fm-warning {
+    background-color: #f08c48;
+    border-color: #fa9549; }
+  .fm-message-overlay.fm-success {
+    background-color: #83c070;
+    border-color: #9bde87; }
+  .fm-message-overlay .close {
+    display: block;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer; }
+  .fm-message-overlay h3 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    width: 920px;
+    margin: 0 auto 5px;
+    color: white;
+    font-size: 16px; }
+  .fm-message-overlay p {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    width: 920px;
+    margin: 0 auto;
+    color: white;
+    font-size: 14px; }
+
 ul.fm-category-tree {
   font-size: 12pt;
   list-style: none;
