--- a/fyndiqmerchant/backoffice/frontend/css/_overlay.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_overlay.scss
@@ -10,8 +10,7 @@
 }
 
 .fm-message-overlay {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
+
   // http://www.red-team-design.com/cool-notification-messages-with-css3-jquery
   box-shadow: inset 0 -1px 0 rgba(255, 255, 255, .3);
   width: 100%;
@@ -21,7 +20,7 @@
   z-index: 999;
   top: 0;
   left: 0;
-  _position: absolute;
+  position: absolute;
   border: none !important;
 
   //text-shadow: 0 1px 0 rgba(0, 0, 0, .5);
