--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -124,6 +124,17 @@
   font-size: 12pt;
   text-align: left; }
 
+.fm-panel table {
+  font-size: 11pt;
+  width: 100%; }
+  .fm-panel table th {
+    background-color: #f5f8fb; }
+  .fm-panel table td,
+  .fm-panel table th {
+    border-collapse: collapse;
+    border-spacing: 0;
+    padding: .6em; }
+
 .fm-loading-overlay {
   background: black;
   background: rgba(0, 0, 0, 0.4);
@@ -140,8 +151,6 @@
     margin: 150px auto; }
 
 .fm-message-overlay {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
   box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.3);
   width: 100%;
   color: white;
@@ -150,7 +159,7 @@
   z-index: 999;
   top: 0;
   left: 0;
-  _position: absolute;
+  position: absolute;
   border: none !important; }
   .fm-message-overlay.fm-info {
     background-color: #799ec4;
@@ -203,20 +212,9 @@ ul.fm-category-tree {
       ul.fm-category-tree li a:hover {
         color: #f08c48; }
 
-.fm-products-list-container table {
-  font-size: 11pt; }
-  .fm-products-list-container table th {
-    background-color: #f5f8fb;
-    border-collapse: collapse;
-    border-spacing: 0;
-    padding: .6em; }
-  .fm-products-list-container table td {
-    border-collapse: collapse;
-    border-spacing: 0;
-    padding: 10px; }
-  .fm-products-list-container table img {
-    border: 1px solid #e3e8ec;
-    max-height: 80px; }
+.fm-products-list-container table img {
+  border: 1px solid #e3e8ec;
+  max-height: 80px; }
 .fm-products-list-container .prices th,
 .fm-products-list-container .prices td {
   background-color: transparent;
