--- a/fyndiqmerchant/backoffice/frontend/css/_overlay.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_overlay.scss
@@ -5,26 +5,20 @@
     width: 128px;
     height: 128px;
     display: block;
-    margin: 150px auto;
+    margin: 200px auto;
   }
 }
 
 .fm-message-overlay {
-
   // http://www.red-team-design.com/cool-notification-messages-with-css3-jquery
   box-shadow: inset 0 -1px 0 rgba(255, 255, 255, .3);
-  width: 100%;
-  color: white;
+  color: $color-light;
+  left: 0;
   padding: 30px 0;
   position: fixed;
-  z-index: 999;
   top: 0;
-  left: 0;
-  position: absolute;
-  border: none !important;
-
-  //text-shadow: 0 1px 0 rgba(0, 0, 0, .5);
-  //animation: animate-bg 5s linear infinite;
+  width: 100%;
+  z-index: 9999 !important;
 
   &.fm-info {
     background-color: #799ec4;
@@ -54,20 +48,10 @@
   }
 
   h3 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    width: 920px;
-    margin: 0 auto 5px;
-    color: white;
-    font-size: 16px;
+    text-align: center
   }
 
   p {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    width: 920px;
-    margin: 0 auto;
-    color: white;
-    font-size: 14px;
+    text-align: center
   }
 }
