--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -148,19 +148,17 @@
     width: 128px;
     height: 128px;
     display: block;
-    margin: 150px auto; }
+    margin: 200px auto; }
 
 .fm-message-overlay {
   box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.3);
-  width: 100%;
-  color: white;
+  color: #fff;
+  left: 0;
   padding: 30px 0;
   position: fixed;
-  z-index: 999;
   top: 0;
-  left: 0;
-  position: absolute;
-  border: none !important; }
+  width: 100%;
+  z-index: 9999 !important; }
   .fm-message-overlay.fm-info {
     background-color: #799ec4;
     border-color: #87acd3; }
@@ -182,19 +180,9 @@
     height: 30px;
     cursor: pointer; }
   .fm-message-overlay h3 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    width: 920px;
-    margin: 0 auto 5px;
-    color: white;
-    font-size: 16px; }
+    text-align: center; }
   .fm-message-overlay p {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    width: 920px;
-    margin: 0 auto;
-    color: white;
-    font-size: 14px; }
+    text-align: center; }
 
 ul.fm-category-tree {
   font-size: 12pt;
