--- a/fyndiqmerchant/backoffice/frontend/css/_products.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_products.scss
@@ -10,7 +10,7 @@ ul.fm-category-tree {
     font-weight: bold;
     padding: 5px 10px;
 
-    &.active a {
+    &.active > a {
       color: $color-pending;
     }
 
