--- a/fyndiqmerchant/backoffice/frontend/css/_colors.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_colors.scss
@@ -38,7 +38,7 @@ $color-navigation-inactive-border: #e3e8ec;
 
 // Table
 $color-table-header-background: #f5f8fb;
-$color-table-odd-row-background: #fcfdff;
+$color-table-odd-row-background: #f5f8fb;
 
 // Pagination
 $color-pagination-inactive-background: #fcfdff;
