--- a/fyndiqmerchant/backoffice/frontend/css/_table.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_table.scss
@@ -12,6 +12,12 @@
       border-collapse: collapse;
       border-spacing: 0;
       padding: .6em;
+      border-top: 1px solid $color-disabled-text;
+      border-bottom: 1px solid $color-disabled-text;
+    }
+
+    tbody tr:nth-child(even) {
+      background-color: $color-table-odd-row-background;
     }
   }
 }
