--- a/fyndiqmerchant/backoffice/frontend/css/_products.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_products.scss
@@ -6,9 +6,8 @@ ul.fm-category-tree {
   padding: 0;
 
   li {
-    border-bottom: 1px solid $color-navigation-inactive-border;
     font-weight: bold;
-    padding: 5px 10px;
+    padding-left: 10px;
 
     &.active > a {
       color: $color-pending;
@@ -16,6 +15,9 @@ ul.fm-category-tree {
 
     a {
       text-decoration: none;
+      border-bottom: 1px solid $color-navigation-inactive-border;
+      padding: 5px 10px 5px 0;
+      display: block;
 
       &:hover {
         color: $color-pending;
