No borders on prices table

--- a/fyndiqmerchant/backoffice/frontend/css/_products.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_products.scss
@@ -38,6 +38,7 @@ ul.fm-category-tree {
     th,
     td {
       background-color: transparent;
+      border: 0;
       padding: 3px 0;
       text-align: left;
       white-space: nowrap;
