--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -210,6 +210,7 @@ ul.fm-category-tree {
 .fm-products-list-container .prices th,
 .fm-products-list-container .prices td {
   background-color: transparent;
+  border: 0;
   padding: 3px 0;
   text-align: left;
   white-space: nowrap; }
