Fixed border volor

--- a/fyndiqmerchant/backoffice/frontend/css/_colors.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_colors.scss
@@ -39,6 +39,7 @@ $color-navigation-inactive-border: #e3e8ec;
 // Table
 $color-table-header-background: #f5f8fb;
 $color-table-odd-row-background: #f5f8fb;
+$color-table-border-color: #e3e8ec;
 
 // Pagination
 $color-pagination-inactive-background: #fcfdff;
