--- a/fyndiqmerchant/backoffice/frontend/css/_table.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_table.scss
@@ -12,8 +12,8 @@
       border-collapse: collapse;
       border-spacing: 0;
       padding: .6em;
-      border-top: 1px solid $color-disabled-text;
-      border-bottom: 1px solid $color-disabled-text;
+      border-top: 1px solid $color-table-border-color;
+      border-bottom: 1px solid $color-table-border-color;
     }
 
     tbody tr:nth-child(even) {
