--- a/fyndiqmerchant/backoffice/frontend/css/_products.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_products.scss
@@ -42,7 +42,9 @@ ul.fm-category-tree {
       padding: 3px 0;
       text-align: left;
       white-space: nowrap;
+      border:none
     }
+
     td {
       text-align: right;
     }
@@ -57,6 +59,9 @@ ul.fm-category-tree {
       padding: 0 3px 0 0;
     }
 
+    tbody tr:nth-child(even) {
+      background-color: transparent;
+    }
     input {
       border: 0;
       border-right: 1px solid $color-disabled-text;
