Decreased button size to 10pt

--- a/fyndiqmerchant/backoffice/frontend/css/_button.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_button.scss
@@ -28,6 +28,7 @@
   background-color: $color-navigation-inactive-background;
   border: 1px solid $color-navigation-inactive-border;
   color: $color-navigation-inactive-text;
+  font-size: $font-size-nav-button;
 }
 
 .btn-nav.active,
