--- a/fyndiqmerchant/backoffice/frontend/css/_typography.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_typography.scss
@@ -14,8 +14,9 @@ $font-size-navigation-button: 16pt;
 $font-size-category: 12pt;
 
 // Button
-$font-size-button: 13pt;
+$font-size-nav-button: 13pt;
 $font-size-button-big: 16pt;
+$font-size-button: 10pt;
 
 // Table
 $font-size-table-header: 14pt;
