--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -57,7 +57,7 @@
   border: 1px solid transparent;
   cursor: pointer;
   display: inline-block;
-  font-size: 13pt;
+  font-size: 10pt;
   outline: none;
   padding: 6px 12px;
   text-decoration: none; }
@@ -78,7 +78,8 @@
 .btn-nav:visited {
   background-color: #fff;
   border: 1px solid #e3e8ec;
-  color: #333; }
+  color: #333;
+  font-size: 13pt; }
 
 .btn-nav.active,
 .btn-nav.active:visited,
