Fixed most of the css-lint warnings; closes #30

--- a/fyndiqmerchant/backoffice/frontend/css/_colors.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_colors.scss
@@ -50,3 +50,16 @@ $color-pagination-disabled-text: $color-disabled-text;
 
 // Form
 $color-form-input-border: #ccc;
+
+// Messages
+$color-message-info-background: #799ec4;
+$color-message-info-border: #87acd3;
+
+$color-message-error-background: #e85353;
+$color-message-error-border: #f55454;
+
+$color-message-warning-background: #e85353;
+$color-message-warning-border: #f55454;
+
+$color-message-success-background: #83c070;
+$color-message-success-border: #9bde87;
