--- a/fyndiqmerchant/backoffice/frontend/css/_helpers.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_helpers.scss
@@ -2,7 +2,8 @@
   text-align: right;
 }
 
-.text-center, .center {
+.text-center,
+.center {
   text-align: center;
 }
 
@@ -32,6 +33,8 @@
     width: $big-icon-size;
   }
 }
-.shadow, .muted {
+
+.shadow,
+.muted {
   color: $color-muted;
 }
