Fixed issue with % in the label (hacky); Fixed settings form look for PS 1.5

--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -123,6 +123,8 @@
   float: left;
   font-size: 12pt;
   text-align: left; }
+.form-horizontal .form-group {
+  height: 1.4em; }
 
 .fm-panel table {
   font-size: 11pt;
