--- a/fyndiqmerchant/backoffice/frontend/css/_form.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_form.scss
@@ -1,4 +1,10 @@
 .form-horizontal {
+
+  fieldset {
+    background-color: transparent;
+    border: 0;
+  }
+
   label {
     margin-top: -3pt;
     text-align: right;
