Fixed import orders button styling

--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -260,7 +260,7 @@
   float: left;
   margin-left: 10px;
   width: 240px; }
-  .fm-sidebar .btn {
+  .fm-sidebar .fm-button {
     text-align: center;
     width: 180px; }
 
