--- a/fyndiqmerchant/backoffice/frontend/css/_table.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_table.scss
@@ -5,6 +5,7 @@
 
     th {
       background-color: $color-table-header-background;
+      font-size: $font-size-table-header;
     }
 
     td,
@@ -14,6 +15,7 @@
       border-spacing: 0;
       border-top: 1px solid $color-table-border-color;
       padding: .4em;
+      font-size: $font-size-table-text;
     }
 
     tbody tr:nth-child(even) {
