--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -141,14 +141,16 @@
   font-size: 11pt;
   width: 100%; }
   .fm-panel table th {
-    background-color: #f5f8fb; }
+    background-color: #f5f8fb;
+    font-size: 9pt; }
   .fm-panel table td,
   .fm-panel table th {
     border-bottom: 1px solid #e3e8ec;
     border-collapse: collapse;
     border-spacing: 0;
     border-top: 1px solid #e3e8ec;
-    padding: .4em; }
+    padding: .4em;
+    font-size: 9pt; }
   .fm-panel table tbody tr:nth-child(even) {
     background-color: #f5f8fb; }
 
