Cleared the main container; close #105

--- a/fyndiqmerchant/backoffice/frontend/css/_layout.scss
+++ b/fyndiqmerchant/backoffice/frontend/css/_layout.scss
@@ -5,6 +5,7 @@
 
 #content.nobootstrap {
   padding: 62px 0 0;
+
 }
 
 .fm-container {
@@ -32,4 +33,8 @@
 .fm-product-panel {
   float: left;
   width: 700px;
+}
+
+.clear {
+  clear: both;
 }
