--- a/fyndiqmerchant/backoffice/frontend/css/main.css
+++ b/fyndiqmerchant/backoffice/frontend/css/main.css
@@ -203,49 +203,49 @@
     text-align: center; }
 
 .pages {
+  float: left;
   margin: 10px 0;
-  width: 350px;
-  float: left; }
+  width: 350px; }
   .pages ol {
     float: left;
-    margin: 0px;
-    padding: 0px;
-    margin-left: 15px; }
+    margin: 0;
+    margin-left: 15px;
+    padding: 0; }
     .pages ol li {
       float: left;
-      margin-right: 5px;
-      list-style: none; }
+      list-style: none;
+      margin-right: 5px; }
       .pages ol li.current {
+        background-color: #f08c48;
+        color: #fff;
+        display: inline-block;
         font-family: 'Montserrat', sans-serif;
-        padding: 8px 12px;
         font-size: 9pt;
-        color: white;
-        outline: none;
-        text-decoration: none;
         line-height: 16px;
+        outline: none;
+        padding: 8px 12px;
+        text-decoration: none;
         -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
-        border-radius: 3px;
-        background-color: #f08c48;
-        display: inline-block; }
+        border-radius: 3px; }
       .pages ol li a {
-        font-family: 'Montserrat', sans-serif;
-        padding: 8px 12px;
-        font-size: 9pt;
-        color: black;
-        cursor: pointer;
-        outline: none;
-        text-decoration: none;
-        line-height: 16px;
-        display: inline-block;
         background-color: #e3e3e3;
+        color: #000;
+        cursor: pointer;
+        display: inline-block;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 9pt;
+        line-height: 16px;
+        outline: none;
+        padding: 8px 12px;
+        text-decoration: none;
         -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
         border-radius: 3px; }
         .pages ol li a:hover {
-          text-decoration: none;
-          color: white;
-          background-color: #f08c48; }
+          background-color: #f08c48;
+          color: #fff;
+          text-decoration: none; }
 
 .fm-category-tree {
   font-size: 12pt;
